--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/entity-slideshow.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/entity-slideshow.css
@@ -117,11 +117,20 @@
       position: absolute;
       top: auto;
       bottom: 0;
-      display: grid;
+      display: flex;
       grid-template-columns: repeat(2, 1fr);
       width: 100%;
-      padding: 28px 38px;
       background-color: rgb(62 62 62 / 75%);
+
+      @media (--viewport-ms-min) {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        padding: 15px;
+      }
+
+      @media (--viewport-md-min) {
+        padding: 28px 38px;
+      }
     }
   }
 
@@ -149,9 +158,13 @@
   &__title {
     margin-bottom: 4px;
     font-weight: 600;
-    font-size: var(--base-font-size-xlarge);
+    font-size: var(--base-font-size-large);
     font-family: var(--heading-font-family);
     line-height: 1.3;
+
+    @media (--viewport-ms-min) {
+      font-size: var(--base-font-size-xlarge);
+    }
 
     &--authoring-information {
       margin-top: 10px;
@@ -169,19 +182,34 @@
   &__description {
     display: -webkit-box; /* stylelint-disable-line */
     margin-bottom: 8px;
-    -webkit-line-clamp: 4;
+    -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
-    font-size: var(--base-font-size);
+    font-size: var(--base-font-size-small);
+
+    @media (--viewport-ms-min) {
+      font-size: var(--base-font-size);
+    }
+
+    @media (--viewport-sm-min) {
+      -webkit-line-clamp: 3;
+    }
+
+    @media (--viewport-xl-min) {
+      -webkit-line-clamp: 4;
+    }
   }
 
   &__subject {
-    display: flex;
+    display: none;
     flex-wrap: wrap;
     justify-content: flex-end;
     margin-top: auto;
     padding: 0 20px 12px;
 
+    @media (--viewport-ms-min) {
+      display: flex;
+    }
 
     &-item {
       display: inline-flex;
